# bastion

./: .env.example  .gitignore  bastion-spec.md  pyproject.toml
.claude/: CLAUDE.md
.planning/: HANDOFF.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/phases/01-foundation-config-rpc-client/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-RESEARCH.md  01-SECURITY.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/phases/02-encrypted-keystore-key-safety-invariants/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-05-PLAN.md  02-05-SUMMARY.md  02-CONTEXT.md  02-RESEARCH.md  02-REVIEW-FIX.md  (+3 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
bastion/: config.py  fund_errors.py  funder.py  land_check.py  sweeper.py
bastion/keystore/: __init__.py  cloudsync.py  crypto.py  errors.py  passphrase.py  session.py  vault.py
bastion/rpc/: client.py  errors.py  ws.py
tests/: conftest.py
tests/e2e/: __init__.py  conftest.py  test_devnet_fund_sweep.py
tests/unit/: test_config.py  test_funder.py  test_harness_smoke.py  test_keystore_cloud_sync.py  test_keystore_crypto.py  test_keystore_no_secret_leak.py  test_keystore_passphrase_ux.py  test_keystore_session.py  test_keystore_vault_isolation.py  test_land_check.py  test_rpc_client.py  test_rpc_ws.py  test_session_retire.py  test_sweeper.py
(+16 files in other folders)
