[project]
name = "bastion"
version = "0.0.1"
description = "Non-custodial, local-first blast-radius containment for Solana terminal/bot trading."
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28,<0.29",
    "python-dotenv>=1.2,<2",
    "websockets>=16,<17",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bastion"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "respx>=0.23.1",
]
